MODSHSLIDE-214 MODSHSLIDE-221 #resolve #comment Height unification and fixed javascript events on IE and Safari (when no flex box is available)

--- a/code/media/mod_jsshackslides/css/jsshackslides.css
+++ b/code/media/mod_jsshackslides/css/jsshackslides.css
@@ -35,6 +35,9 @@
 	-ms-align-items: stretch;
 	align-items: stretch;
 }
+.jss-slider .owl-carousel .jss-image .jss-title-description img {
+	width: auto;
+}
 .jss-slider .owl-carousel .jss-title-description .jss-title,
 .jss-slider .owl-carousel .jss-title-description .jss-description {
 	position: relative;
